--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>MavenGroup</groupId>
-  <artifactId>Mavendeploy</artifactId>
+  <artifactId>deploy</artifactId>
   <version>Maven-1.0-Snapshot</version>
 
   <name>MavenArtifact</name>
