--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>MavenGroup</groupId>
   <artifactId>deploy</artifactId>
   <version>Maven-1.0-Snapshot</version>
-  <packaging>war</packaging>
+  
   <name>MavenArtifact</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
@@ -48,7 +48,7 @@
           <version>2.20.1</version>
         </plugin>
         <plugin>
-          <artifactId>maven-war-plugin</artifactId>
+          <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
         </plugin>
         <plugin>
